* irssi: update to version 1.0.7 (security fix)
* unzip: patch version 6.0 (security fix)
* libtasn1: update to version 4.13 (security fix)
* rsync: update to version 3.1.3 (security fix)
* libvorbis: patch version 1.3.5 (security fix)
* dovecot: update to version 2.2.33.2 and patch (security fix)
* mxml: update to version 2.11 (security fix)
* squid: update to version 3.5.27 and patch CVE (security fix)
* bind: update to version 9.10.6-P1 (CVE-2017-3137)
* curl: update to version 7.58.0 (CVE-2018-1000007 and CVE-2018-1000005)
* unbound: update to version 1.6.8 (CVE-2017-15105)
* knot-resolver: patch version 1.5.1 (CVE-2018-1000002)
* knot-resolver: update to version 1.5.1
* unbound: update to version 1.6.7
* knot-resolver: update to version 1.5.0
* curl: update to version 7.56.0
* ntpd: update to version 4.2.8p10
* irssi: update to version 1.0.4
* tor: update to version 0.2.9.12
* bash: enabled job control
* Foris: new configuration backend added
* Foris: splitted into foris-wizard and foris-config web apps
* Foris: use openwrt ubus session
* Foris: integrate with foris-ws (websocket server for foris)
===================== 3.8 =======================
* updater: syntax without brackets (so called morhered) is now marked as obsolete
* userlists: now only minimal number of packages are handled as critical
* userlists: unbound is no longer in base userlist on Omnia
* Drop getbranch package
* suricata: 4.0.0 (final)
* Foris: simple QoS for guest network
* Foris: dns from dhcp
* Foris: russian, danish and lithuanian translations added
* ucollect: Drop NAT detector
* pakon-guts: less verbose logging, increase CPU priority
* Kill logsend
* Foris: update approvals
* jansson: update to version 2.10
* libuv: update to version 1.12.0
* liburcu: update to version 0.10.0
* luasec: update to version 0.6
* LuaJIT: update to version 2.0.5
* GnuTLS: update to version 3.5.13
* knot: update to version 2.5.1
* knot-resolver: update to version 1.3.0